Спринт 9 исправление 1